Update - adicionando log